; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_execParallel.c_ExecParallelGetReceiver.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_execParallel.c_ExecParallelGetReceiver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PARALLEL_KEY_TUPLE_QUEUE = common dso_local global i32 0, align 4
@ParallelWorkerNumber = common dso_local global i32 0, align 4
@PARALLEL_TUPLE_QUEUE_SIZE = common dso_local global i32 0, align 4
@MyProc = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @ExecParallelGetReceiver to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ExecParallelGetReceiver(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32, i32* @PARALLEL_KEY_TUPLE_QUEUE, align 4
  %9 = call i8* @shm_toc_lookup(i32* %7, i32 %8, i32 0)
  store i8* %9, i8** %5, align 8
  %10 = load i32, i32* @ParallelWorkerNumber, align 4
  %11 = load i32, i32* @PARALLEL_TUPLE_QUEUE_SIZE, align 4
  %12 = mul nsw i32 %10, %11
  %13 = load i8*, i8** %5, align 8
  %14 = sext i32 %12 to i64
  %15 = getelementptr inbounds i8, i8* %13, i64 %14
  store i8* %15, i8** %5, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = bitcast i8* %16 to i32*
  store i32* %17, i32** %6, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = load i32, i32* @MyProc, align 4
  %20 = call i32 @shm_mq_set_sender(i32* %18, i32 %19)
  %21 = load i32*, i32** %6, align 8
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @shm_mq_attach(i32* %21, i32* %22, i32* null)
  %24 = call i32* @CreateTupleQueueDestReceiver(i32 %23)
  ret i32* %24
}

declare dso_local i8* @shm_toc_lookup(i32*, i32, i32) #1

declare dso_local i32 @shm_mq_set_sender(i32*, i32) #1

declare dso_local i32* @CreateTupleQueueDestReceiver(i32) #1

declare dso_local i32 @shm_mq_attach(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
